<resources>
    <string name="app_name">CricketScore</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="matches">Matches</string>


    <string name="date_util_suffix">ago</string>
    <string name="just_now">Just now</string>
    <string name="a_min_ago">a minute ago</string>
    <string name="mins_ago">minute ago</string>
    <string name="a_hour_ago">a hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="fav">Favourites</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="settings">Settings</string>
</resources>